--- a/css/main.css
+++ b/css/main.css
@@ -118,9 +118,9 @@
 /* Media Query */
 
 @media only screen  and (max-width:688px){
-    body{
-        overflow-x:hidden;
-    }
+    section{
+        overflow-x: hidden;
+     }
     .aside-article-container{
         flex-direction: column;
     }
@@ -150,9 +150,9 @@
 }
 
 @media only screen and (min-width:689px) and (max-width:992px){
-    body{
-        overflow-x:hidden;
-    }
+     section{
+        overflow-x: hidden;
+     }
     .blogs{
         grid-template-columns: repeat(2,1fr);
     }
