--- a/css/website-2.css
+++ b/css/website-2.css
@@ -56,9 +56,9 @@
 
 /* Media Query */
 @media only screen and (max-width:688px){
-    body{
-        overflow-x:hidden;
-    }
+    section{
+        overflow-x: hidden;
+     }
     .nav-box nav p:first-child{
         border: 0;
     }
